# apt-mate

./: .env.example  Cargo.toml  Justfile
.helix/: languages.toml
app/: Cargo.toml
app/src/: lib.rs
app/src/api/: users.rs
server/: Cargo.toml  Justfile
server/entities/: Cargo.toml
server/entities/src/: chores.rs  expenses.rs  lib.rs  prelude.rs  user_chore_assignments.rs  user_expense_assignments.rs  users.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20231127_011926_create_user_table.rs  m20231127_152600_chores.rs  m20231127_152607_expenses.rs  m20231127_160503_create_user_expense_assignemnt_table.rs  m20231127_161328_create_user_chore_assignemnt_table.rs  m20231201_184318_seed.rs
server/src/: main.rs
