[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
leptos_router.workspace = true

axum.workspace = true
dotenv.workspace = true
log.workspace = true
migration.workspace = true
simple_logger.workspace = true
sea-orm = { version = "0.12.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
